@@ -1,3 +1,8 @@
+2009-12-20  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb: easy string pattern for
+	`gluon_path_match'.
+
 2009-12-19  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/controller.rb: `gluon_path_filter' ->
